correct menu div page alignment

--- a/orders/static/orders/styles.css
+++ b/orders/static/orders/styles.css
@@ -25,13 +25,12 @@ ul {
 .menu {
   position: absolute;
   width: 50%;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -30%);
+  transform: translate(-50%);
   background-color: wheat;
   box-shadow: 5px 10px 18px #888888;
-  margin-bottom: 40px;
-  margin-top: 200px; }
+  margin-bottom: 2%;
+  margin-top: 2%; }
 
 .title {
   text-align: center;
